# ssl_firmware

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
.github/workflows/: zephyr_build.yml
applications/blinky/src/: main.c
applications/nexus/: CMakeLists.txt  app.overlay  prj.conf
applications/nexus/src/: init.c  init.h  main.c  shell.c  sx1280.c  sx1280.h  work.c  work.h
boards/st/nucleo_h723zg/: roboime_nucleo_h723zg.yaml
boards/st/roboime_nucleo_h723zg/: Kconfig.defconfig  Kconfig.roboime_nucleo_h723zg  board.yml  roboime_nucleo_h723zg.dts
boards/st/roboime_nucleo_h723zg/support/: openocd.cfg
include/roboime/: robo_led.h
scripts/: setup.sh  west-commands.yml
scripts/west_commands/: console.py  console.sh  setup.sh  test_command.py  west-commands.yml
subsys/: CMakeLists.txt  Kconfig
subsys/robo_led/: CMakeLists.txt  Kconfig  robo_led.c
zephyr/: module.yml
